--- a/software.yaml
+++ b/software.yaml
@@ -1,10 +1,15 @@
-- name: Install Slack, WhatsApp, OneDrive, and Desktop Environment on Ubuntu VMs
+- name: Install Slack, WhatsApp, and Desktop Environment on Ubuntu VMs
   hosts: ubuntu_vms
   become: yes
   tasks:
     - name: Update apt cache
       apt:
         update_cache: yes
+
+    - name: Install snapd
+      apt:
+        name: snapd
+        state: present
 
     - name: Install Slack via snap
       snap:
@@ -15,11 +20,6 @@
     - name: Install WhatsApp (via WhatsApp Desktop client)
       snap:
         name: whatsapp-desktop-client
-        state: present
-
-    - name: Install OneDrive client
-      apt:
-        name: onedrive
         state: present
 
     - name: Install ubuntu-desktop, XRDP, and GNOME terminal
@@ -38,3 +38,10 @@
         name: xrdp
         enabled: yes
         state: started
+
+    - name: Create RDP user with password
+      user:
+        name: rdpuser
+        shell: /bin/bash
+        groups: sudo
+        password: "{{ '<pass>' | password_hash('sha512') }}"
